Fixed output directory of C# project. Now it works

--- a/MyDLLCliWrapper/MyDLLCliWrapper.vcxproj
+++ b/MyDLLCliWrapper/MyDLLCliWrapper.vcxproj
@@ -99,9 +99,9 @@
       <SubSystem>NotSet</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>MyDll.lib</AdditionalDependencies>
-      <DelayLoadDLLs>
-      </DelayLoadDLLs>
+      <AdditionalDependencies>
+      </AdditionalDependencies>
+      <DelayLoadDLLs>MyDll.dll</DelayLoadDLLs>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
