とりあえずコミット。どこまでやったか忘れた

--- a/MyDLLCliWrapper/MyDLLCliWrapper.vcxproj
+++ b/MyDLLCliWrapper/MyDLLCliWrapper.vcxproj
@@ -168,6 +168,11 @@
       <Project>{c30197cd-70bb-46c2-921c-43d1cd7af4ab}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="testMessage.txt">
+      <DeploymentContent>true</DeploymentContent>
+    </Text>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
