--- a/MyDLLCliWrapper/MyDLLCliWrapper.vcxproj.filters
+++ b/MyDLLCliWrapper/MyDLLCliWrapper.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="testMessage.txt">
+      <Filter>リソース ファイル</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
